--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -469,19 +469,31 @@ header img {
 // // // // // // // // // // // // // // // // // //
 // Benefits Of Working With Us Section Styling //
 #benefits-container {
-  grid-template-rows: repeat(7, auto);
-  row-gap: 2rem;
   background-color: $dark-purple;
   border-radius: 0;
   border: none;
   padding-bottom: 5rem;
 }
 
+#benefits-header {
+  display: grid;
+  text-align: center;
+  color: white;
+  background-color: $dark-purple;
+  font-size: 1.6em;
+}
+
 @media screen and (max-width:768px) {
   #benefits-container {
     display: grid;
     grid-template-rows: repeat(7, auto);
+    row-gap: 2em;
   }
+
+  #benefits-header {
+    padding: 1rem 0;
+  }
+
 }
 
 @media screen and (min-width:768px) and (max-width:1024px) {
@@ -490,15 +502,9 @@ header img {
     grid-template-columns: repeat(2, 1fr);
     column-gap: 2rem;
     grid-template-rows: repeat(3, auto);
+    row-gap: 2rem;
   }
 
-  #benefits-header {
-    display: grid;
-    text-align: center;
-    color: white;
-    background-color: $dark-purple;
-    font-size: 1.5em;
-  }
 }
 
 
@@ -653,47 +659,64 @@ header img {
 // End Of Benefits Of Working With Us Section Styling //
 // // // // // // // // // // // // // // // // // //
 //  About Us Section Styling //
-#about-us {
+#about-us,
+#about-us-1 {
   display: grid;
-  grid-template-rows: repeat(5, auto);
 }
 
 @media screen and (max-width: 768px) {
   #about-us {
-    display: grid;
+    grid-template-rows: repeat(5, auto);
     grid-template-columns: 100vw;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width:1024px) {
+
+  #about-us-1 {
+    grid-template-areas:
+      "header sidebar-image"
+      "main-text sidebar-quote"
+      "footer-text sidebar-svg";
+    grid-template-columns: 60% 40%;
+    grid-template-rows: repeat(3, auto);
   }
 }
 
 #about-us h1 {
   color: $dark-purple;
-  padding-left: 1rem;
-  font-size: 3em;
+  font-size: 5em;
+  padding-left: .4em;
+  text-align: left;
+  align-self: bottom;
 }
 
-#about-us-text {
-  width: 100vw;
+#about-us-text-1,
+#about-us-text-2 {
   display: grid;
-  font-size: 1em;
-  padding-left: 1rem;
-  line-height: 2em;
+  font-size: 1.5em;
+  padding-left: 1em;
+  line-height: 2.2em;
   color: $dark-grey;
-  font-size: 1.3em;
 }
 
-#about-us-text p {
-  width: 100vw;
+#about-us-text-2 {
+  padding-top: 4rem;
 }
+
 
 #about-us img {
-  width: 50%;
+  width: 70%;
   padding-left: 1rem;
+  justify-self: center;
 }
 
 #about-us h2 {
-  font-size: 2.3rem;
+  font-size: 2.1rem;
+  line-height: 4rem;
   color: $dark-purple;
-  padding-left: 1rem;
+  padding-left: 1.4em;
+  height: 100%;
 }
 
 #u-svg-content {
@@ -705,13 +728,45 @@ header img {
   grid-template-columns: 1fr 8fr;
   align-items: center;
   justify-items: center;
-  width: 10rem;
-  height: auto;
+  width: 13em;
+  height: 4em;
   border-radius: 1em;
   color: white;
   background-color: $dark-purple;
   padding: 0 1em 0 1em;
   margin: 0 0 5rem 1rem;
+}
+
+@media screen and (min-width:768px) and (max-width:1024px) {
+
+  #about-us h1 {
+    grid-area: header;
+    grid-template-columns: 100px;
+  }
+
+  #about-us-text-1 {
+    grid-area: main-text;
+  }
+
+  #about-us-text-2 {
+    grid-area: footer-text;
+    padding-bottom: 15rem;
+  }
+
+  #about-us img {
+    grid-area: sidebar-image;
+  }
+
+  #about-us h2 {
+    grid-area: sidebar-quote;
+  }
+
+  #linkedin {
+    grid-area: sidebar-svg;
+    justify-self: center;
+  }
+
+
 }
 
 // End Of About Us Section Styling //
