--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,28 +1,28 @@
 // Variable References (Colors...duh) //
-$dark-blue: #0084FF;
-$light-blue: #B8DDFF;
+$dark-blue: #0084ff;
+$light-blue: #b8ddff;
 
-$dark-green: #54C788;
-$light-green: #CAF0DB;
+$dark-green: #54c788;
+$light-green: #caf0db;
 
-$dark-red: #FF8A8A;
-$light-red: #FFD2D2;
+$dark-red: #ff8a8a;
+$light-red: #ffd2d2;
 
-$dark-yellow: #FFC166;
-$light-yellow: #FFE7C4;
+$dark-yellow: #ffc166;
+$light-yellow: #ffe7c4;
 
-$dark-purple: #9693E6;
-$light-purple: #D5D4F5;
+$dark-purple: #9693e6;
+$light-purple: #d5d4f5;
 
 $dark-grey: #333333;
 // Partials... also duh //
 @use "responsive";
 
-// General Selector Styling // 
+// General Selector Styling //
 body {
   margin: 0px;
   padding: 0px;
-  font-family: 'PT Sans', sans-serif;
+  font-family: "PT Sans", sans-serif;
   overflow-x: hidden;
 }
 
@@ -37,9 +37,9 @@ img {
   box-sizing: border-box;
 }
 
-@media screen and (max-width:768px) {
+@media screen and (max-width: 768px) {
   .container {
-    padding: 0
+    padding: 0;
   }
 
   .tablet-word-wrap {
@@ -47,8 +47,8 @@ img {
   }
 }
 
-@media screen and (min-width:768px) and (max-width:1024px) {
-  .mobile-word-wrap-test {
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .mobile-word-wrap {
     display: none;
   }
 }
@@ -103,7 +103,6 @@ header img {
   line-height: 2em;
   width: 100%;
   font-size: 1.5em;
-
 }
 
 #demo-application h1 {
@@ -124,7 +123,7 @@ header img {
 
 .apple-svg {
   justify-self: end;
-  margin-right: .5rem;
+  margin-right: 0.5rem;
   font-size: 2rem;
 }
 
@@ -205,7 +204,7 @@ header img {
 }
 
 // Mobile and Tablet //
-@media screen and (max-width:1024px) {
+@media screen and (max-width: 1024px) {
 
   #clean-code img,
   #web-design img,
@@ -215,11 +214,10 @@ header img {
     display: grid;
     justify-self: center;
   }
-
 }
 
 // Tablet
-@media screen and (min-width:768px) and (max-width:1024px) {
+@media screen and (min-width: 768px) and (max-width: 1024px) {
   #demo-application {
     grid-column: span 2;
   }
@@ -249,7 +247,6 @@ header img {
     text-align: center;
     padding: 2rem;
   }
-
 }
 
 // End Of 5 Card Layout Styling //
@@ -328,7 +325,6 @@ header img {
 
 // End Of App Development Styling //
 
-
 // End Of Card Within A Card Styling //
 // // // // // // // // // // // // // // // // // //
 // Testimonials Section Styling //
@@ -374,15 +370,14 @@ header img {
   text-align: left;
 }
 
-@media screen and (min-width:768px) and (max-width:1024px) {
+@media screen and (min-width: 768px) and (max-width: 1024px) {
   #tablet-word-wrap {
     display: block;
   }
 }
 
-
 // End Of Testimonial Header and Text (Not The Cards) Styling //
-@media screen and (max-width:768px) {
+@media screen and (max-width: 768px) {
 
   #testimonial-1,
   #testimonial-2,
@@ -406,7 +401,7 @@ header img {
   }
 }
 
-@media screen and (min-width:768px) and (max-width:1024px) {
+@media screen and (min-width: 768px) and (max-width: 1024px) {
 
   #testimonial-1,
   #testimonial-2,
@@ -448,11 +443,11 @@ header img {
 }
 
 #testimonial-1 {
-  background-color: $light-red
+  background-color: $light-red;
 }
 
 #testimonial-2 {
-  background-color: $light-yellow
+  background-color: $light-yellow;
 }
 
 #testimonial-3 {
@@ -483,7 +478,7 @@ header img {
   font-size: 1.6em;
 }
 
-@media screen and (max-width:768px) {
+@media screen and (max-width: 768px) {
   #benefits-container {
     display: grid;
     grid-template-rows: repeat(7, auto);
@@ -493,10 +488,9 @@ header img {
   #benefits-header {
     padding: 1rem 0;
   }
-
 }
 
-@media screen and (min-width:768px) and (max-width:1024px) {
+@media screen and (min-width: 768px) and (max-width: 1024px) {
   #benefits-container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -504,9 +498,7 @@ header img {
     grid-template-rows: repeat(3, auto);
     row-gap: 2rem;
   }
-
 }
-
 
 #high-quality p,
 #creative-team p,
@@ -664,7 +656,7 @@ header img {
   display: grid;
 }
 
-@media screen and (max-width:768px) {
+@media screen and (max-width: 768px) {
   #about-us {
     grid-template-columns: 1fr;
     grid-template-rows: repeat(7, auto);
@@ -683,7 +675,7 @@ header img {
   }
 
   #about-us h1 {
-    padding-left: .8em;
+    padding-left: 0.8em;
   }
 }
 
@@ -701,11 +693,10 @@ header img {
 #about-us h2 {
   color: $dark-purple;
   font-size: 2em;
-  padding-left: .8em;
+  padding-left: 0.8em;
 }
 
-
-@media screen and (min-width:768px) and (max-width:1024px) {
+@media screen and (min-width: 768px) and (max-width: 1024px) {
   #about-us {
     grid-template-columns: 2fr 1fr;
     grid-template-rows: repeat(3, auto);
@@ -742,7 +733,6 @@ header img {
     width: 70%;
     margin-left: 2em;
   }
-
 }
 
 #linkedin {
@@ -806,7 +796,7 @@ header img {
   width: 60%;
   border-radius: 50px;
   margin-left: 5rem;
-  letter-spacing: .1em;
+  letter-spacing: 0.1em;
 }
 
 #misc-row {
@@ -826,8 +816,8 @@ header img {
 #big-dot {
   font-size: 2rem;
   align-self: start;
-  padding-bottom: .6em;
-  padding: 0 .1em .6em .1em;
+  padding-bottom: 0.6em;
+  padding: 0 0.1em 0.6em 0.1em;
 }
 
 // End Of Get Started Section Styling //
